--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": "Eliz Kilic",
     "dependencies": {},
-    "description": "Extends markdown-it plugin with various plugins",
+    "description": "Fast table implementation in Canvas",
     "devDependencies": {
         "@types/mocha": "^5.0.0",
         "@types/node": "^12.0.0",
@@ -25,5 +25,5 @@
         "clean": "rm -rf dist; rm -f test/*.png",
         "test": "node_modules/mocha/bin/_mocha --require ts-node/register/transpile-only test/*.spec.ts"
     },
-    "version": "0.0.1"
+    "version": "0.0.2"
 }
