--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "ts-node": "^7.0.1",
         "typescript": "^3.6.0"
     },
-    "license": "Apache-2.0",
+    "license": "MIT",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "name": "canvas-table",
