--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "scripts": {
         "build": "tsc",
         "clean": "rm -rf dist; rm -f test/*.png",
-        "test": "node_modules/mocha/bin/_mocha --require ts-node/register/transpile-only test/*.spec.ts"
+        "test": "node_modules/mocha/bin/_mocha --timeout 10000 --require ts-node/register/transpile-only test/*.spec.ts"
     },
     "version": "0.0.4"
 }
