--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,10 @@
-name: node
+name: Node.js CI
 
-on: [push]
+on:
+  push:
+    branches: [ $default-branch ]
+  pull_request:
+    branches: [ $default-branch ]
 
 jobs:
   build:
@@ -9,19 +13,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [15.x]
+        node-version: [10.x, 12.x, 14.x, 15.x]
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2.1.4
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
-        npm ci
-        npm run build --if-present
-        npm test
-      env:
-        CI: true
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
