--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,14 +17,25 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [15.x]
 
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2.1.4
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+      env:
+        CI: true
+    - name: send message
+      uses: appleboy/telegram-action@0.0.3
+      env:
+        TELEGRAM_TOKEN: ${{ secrets.telegram_token }}
+        TELEGRAM_TO: ${{ secrets.telegram_to }}
+      with:
+        message: |
+          ${{ github.repo }} repo with ${{ github.event_name }} event triggered,
+          final status is {{ job.status }}.
